--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -21,6 +21,8 @@
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
     "vue-devtools": "^5.1.4",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-mugen-scroll": "^0.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
