--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -23,6 +23,7 @@
     "vue-devtools": "^5.1.4",
     "vue-infinite-scroll": "^2.0.2",
     "vue-mugen-scroll": "^0.2.6",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-touch-ripple": "^3.0.0",
     "vuex": "^3.6.2"
