--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -14,9 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ant-design-vue": "^2.1.2",
     "axios": "^0.21.1",
+    "element-plus": "^1.0.2-beta.40",
     "element-ui": "^2.15.1",
     "express": "^4.17.1",
+    "less": "^4.1.1",
     "qs": "^6.10.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
@@ -25,6 +28,7 @@
     "vue-mugen-scroll": "^0.2.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
+    "vue-skeleton-antd": "0.0.4",
     "vue-touch-ripple": "^3.0.0",
     "vuex": "^3.6.2"
   },
@@ -63,11 +67,13 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "less-loader": "^5.0.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "page-skeleton-webpack-plugin": "^0.10.12",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
