--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -14,13 +14,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "ant-design-vue": "^2.1.2",
+    "ajv": "^6.12.6",
+    "ant-design-vue": "^1.7.4",
     "axios": "^0.21.1",
-    "element-plus": "^1.0.2-beta.40",
     "element-ui": "^2.15.1",
     "express": "^4.17.1",
-    "less": "^4.1.1",
+    "less": "^2.7.3",
     "qs": "^6.10.1",
+    "sass-loader": "^11.0.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
     "vue-devtools": "^5.1.4",
@@ -28,7 +29,6 @@
     "vue-mugen-scroll": "^0.2.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vue-skeleton-antd": "0.0.4",
     "vue-touch-ripple": "^3.0.0",
     "vuex": "^3.6.2"
   },
@@ -79,7 +79,6 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^11.0.1",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -89,7 +88,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
