--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -22,6 +22,7 @@
     "less": "^2.7.3",
     "qs": "^6.10.1",
     "sass-loader": "^11.0.1",
+    "v-blur": "^1.0.4",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
     "vue-devtools": "^5.1.4",
