fix bugs picture --cfr

--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "element-ui": "^2.15.1",
     "express": "^4.17.1",
+    "jwchat": "^0.3.9",
     "less": "^2.7.3",
     "qs": "^6.10.1",
     "sass-loader": "^11.0.1",
@@ -27,6 +28,7 @@
     "vue-axios": "^3.2.4",
     "vue-devtools": "^5.1.4",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-mchat": "^1.2.0",
     "vue-mugen-scroll": "^0.2.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
