--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -22,9 +22,10 @@
     "jwchat": "^0.3.9",
     "less": "^2.7.3",
     "qs": "^6.10.1",
-    "sass-loader": "^11.0.1",
+    "swiper": "^6.5.8",
     "v-blur": "^1.0.4",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^3.2.4",
     "vue-devtools": "^5.1.4",
     "vue-infinite-scroll": "^2.0.2",
@@ -73,7 +74,6 @@
     "less-loader": "^5.0.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
-    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "page-skeleton-webpack-plugin": "^0.10.12",
@@ -82,6 +82,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.3.1",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
