--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jwchat": "^0.3.9",
     "less": "^2.7.3",
+    "localforage": "^1.9.0",
     "qs": "^6.10.1",
     "swiper": "^6.5.8",
     "v-blur": "^1.0.4",
