--- a/finalvue1/package.json
+++ b/finalvue1/package.json
@@ -27,6 +27,7 @@
     "swiper": "^6.5.8",
     "v-blur": "^1.0.4",
     "vue": "^2.5.2",
+    "vue-awesome": "^4.1.0",
     "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^3.2.4",
     "vue-devtools": "^5.1.4",
